[package]
name = "network-flow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library of network flow for rust lang"
authors = ["Shan Xizeng <shanxizeng@foxmail.com>"]
repository = "https://github.com/shanxizeng/network_flow_rs"
keywords = ["graph", "network_flow", "max_flow", "min_cost_max_flow"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust-bla = "0.*"
dot-structures = "0.1.0"
dot-generator = "0.2.0"